Fix layout distortion on mobile devices.

--- a/apps/frontend/public/style.css
+++ b/apps/frontend/public/style.css
@@ -208,6 +208,9 @@ textarea:hover {
 .image-size {
   display: flex;
 }
+.image-size-input {
+  width: 100px;
+}
 .cors-button {
   border: solid 1px rgba(0, 0, 0, 0.23);
   border-radius: 12px;
@@ -342,6 +345,9 @@ textarea:hover {
   }
   textarea {
     width: 100%;
+  }
+  .image-size-input {
+    width: 80px;
   }
   .result-container {
     padding: 16px 4px 16px 16px;
